fix horizontal scroll issue

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  overflow: hidden;
 }
 
 .agency-info {
@@ -568,6 +570,8 @@
 /* studies styles */
 .studies {
   padding: 100px 150px;
+  position: relative;
+  overflow: hidden;
 }
 
 .title-items {
